--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <activity
       android:exported="true"
-      android:name=".MainActivity">
+      android:name=".controller.MainActivity">
 
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
